Fix: Text off center in buttons on chrome

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -108,6 +108,11 @@ h1 {
 button:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+.button-text{
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
 .icon{
     max-width: 5rem;
 }
